--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,7 @@ Markdown==3.3.4
 MarkupSafe==2.0.0
 matplotlib==3.4.2
 murmurhash==1.0.5
-numpy==1.20.3
+numpy
 oauthlib==3.1.0
 opt-einsum==3.3.0
 packaging==20.9
