--- a/requirements.txt
+++ b/requirements.txt
@@ -1,137 +1,11 @@
-absl-py==0.12.0
-appdirs==1.4.4
-appnope==0.1.2
-astor==0.8.1
-astunparse==1.6.3
-backcall==0.2.0
-beautifulsoup4==4.9.3
-bidict==0.21.2
-blis==0.7.4
-bs4==0.0.1
-bson==0.5.10
-cachetools==4.2.2
-catalogue==2.0.4
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-cmake==3.18.4.post1
-colorama==0.4.4
-configparser==5.0.2
-crayons==0.4.0
-cssselect==1.1.0
-cycler==0.10.0
-cymem==2.0.5
-decorator==5.0.7
-distlib==0.3.1
-dlib==19.22.0
-dnspython==1.16.0
-ethnicolr==0.4.0
-eventlet==0.31.0
-face-recognition==1.3.0
-face-recognition-models==0.3.0
-fastai==2.1.8
-fastcore==1.3.10
-fastprogress==1.0.0
-filelock==3.0.12
-Flask==2.0.0
-Flask-Cors==3.0.10
-Flask-SocketIO==4.3.2
-flatbuffers==1.12
-gast==0.4.0
-google-auth==1.30.0
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-greenlet==1.1.0
-grpcio==1.34.1
-gunicorn==20.1.0
-h5py==3.1.0
-idna==2.10
-importlib-metadata==4.0.1
-ipython==7.22.0
-ipython-genutils==0.2.0
-itsdangerous==2.0.1
-jedi==0.18.0
-Jinja2==3.0.0
-joblib==1.0.1
-Keras==2.4.3
-Keras-Applications==1.0.8
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-lxml==4.6.3
-Markdown==3.3.4
-MarkupSafe==2.0.0
-matplotlib==3.4.2
-murmurhash==1.0.5
-numpy
-oauthlib==3.1.0
-opt-einsum==3.3.0
-packaging==20.9
-pandas==1.2.4
-parsel==1.6.0
-parso==0.8.2
-pathy==0.5.2
-pickleshare==0.7.5
-Pillow==8.2.0
-pipenv==2020.11.15
-plac==1.3.3
-preshed==3.0.5
-prompt-toolkit==3.0.18
-protobuf==3.17.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pydantic==1.7.4
-Pygments==2.8.1
-pymongo==3.11.4
-pyparsing==2.4.7
-python-dateutil==2.8.1
-python-engineio==3.14.2
-python-http-client==3.3.2
-python-socketio==4.6.1
-python-utils==2.5.6
-pytz==2021.1
-PyYAML==5.4.1
-redis==3.5.3
-requests==2.24.0
-requests-oauthlib==1.3.0
-rsa==4.7.2
-schedule==1.1.0
-scikit-learn==0.24.2
-scipy==1.6.3
-selenium==3.141.0
-sendgrid==6.7.0
-six==1.15.0
-sklearn==0.0
-smart-open==3.0.0
-soupsieve==2.0.1
-spacy==3.0.6
-spacy-legacy==3.0.5
-srsly==2.4.1
-starkbank-ecdsa==1.1.0
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.5.0
-tensorflow-estimator==2.5.0
-termcolor==1.1.0
-thinc==8.0.3
-threadpoolctl==2.1.0
-torch==1.8.1
-torchvision==0.9.1
-tqdm==4.60.0
-traitlets==5.0.5
-typer==0.3.2
-typing-extensions==3.7.4.3
-urllib3==1.25.11
-virtualenv==20.4.7
-virtualenv-clone==0.5.4
-w3lib==1.22.0
-waitress==2.0.0
-wasabi==0.8.2
-wcwidth==0.2.5
-webdriver-manager==3.4.1
-Werkzeug==2.0.0
-wrapt==1.12.1
-xgboost==1.5.1
-xlrd==2.0.1
-zipp==3.4.1
+Flask==1.1.1
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+Werkzeug==0.15.5
+numpy>=1.9.2
+scipy>=0.15.1
+scikit-learn>=0.18
+matplotlib>=1.4.3
+pandas>=0.19
